--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "emailjs-imap-client": "^3.0.0",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
+    "flash-express": "git://github.com/deveshgoyal/flash-express.git",
     "http-errors": "~1.6.2",
     "jade": "~1.11.0",
-    "morgan": "~1.9.0",
-    "emailjs-imap-client": "^3.0.0"
+    "morgan": "~1.9.0"
   }
 }
