--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "emailjs-imap-client": "^3.0.0",
     "express": "~4.16.0",
+    "connect-redis": "~3.3.3",
     "express-session": "^1.15.6",
     "flash-express": "git://github.com/deveshgoyal/flash-express.git",
     "http-errors": "~1.6.2",
